Apenas gera em pdf

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,3 @@
-<form (submit)="downloadTemplate()">
-  <input
-    type="text"
-    [(ngModel)]="formData.name"
-    name="name"
-    placeholder="Name"
-  />
-  <input
-    type="number"
-    [(ngModel)]="formData.age"
-    name="age"
-    placeholder="Age"
-  />
-  <button type="submit">Submit</button>
-</form>
+<div>
+  <input type="file" (change)="onFileSelected($event)" />
+</div>
